--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -18,7 +18,7 @@
 
 .product{
     background: var(--secundary-light-color);
-    padding: 10px;
+    /* padding: 10px; */
     border-radius: 4px;
     transition: transform 0.3s ease-in-out;
    
@@ -47,7 +47,7 @@
     .product-portfolio{
         grid-gap: 3rem;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        max-width: 900px;
+        max-width: 1200px;
         
     }
     
