--- a/css/profile.css
+++ b/css/profile.css
@@ -54,7 +54,16 @@
   filter: brightness(130%);
 }
 
-
+.profile-bg{
+  min-height: 650px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url(../img/servicios/gym-box.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 
 
 
@@ -73,14 +82,24 @@
     max-width: 350px;
     transform: scaleX(-1);
   }
-  
-  .profile {
+
+
+.profile-bg{
+
+    width: 100%;
+    height: 400px;
+    padding: 0;
+    margin: 0;
+
+    }
+    .profile {
     text-align: left;
     display: flex;
     justify-content: space-around;
     max-width: 980px;
     margin: 0 auto;
     align-items: center;
+    gap: 8rem;  
   }
   
   .logo-profile{
@@ -136,4 +155,12 @@
   }
 
   
+@media (min-width: 950px) {
+  .profile-bg{
+    background-size: cover;
+    margin: 0;
+
+  }
+}
+
 }
